tests/fail/expr/cast.rs
fn main() {
    one_assert::assert!(1 as bool);
    one_assert::assert!(1 as i32);
}
